[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ml-pipeline-debugger"
version = "0.1.0"
description = "OpenEnv-compliant RL environment for LLM-driven ML pipeline debugging"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["openenv", "reinforcement-learning", "llm", "ml-debugging", "pydantic"]

dependencies = [
    "pydantic>=2.7.1,<3.0",
    "numpy>=1.26.4,<2.0",
    "openai>=1.30.1",
    "pyyaml>=6.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "baseline*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"